test/functional/Sema/simple_overload_test.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// Simple overloaded function test
func test(x: Int) -> Int {
    return x + 1;
}

func test(x: String) -> String {
    return x + "!";
}

func main() -> Int {
    // This should cause an argument conversion error and show available overloads
    let result = test(3.14);
    // CHECK: error: Cannot use float literal as ?

    return 0;
}
